Quick fix to the profile page to fix the friends pics. Still needs some work with the caption and the div spacing they go into. (Caption hangs outside of the friends box(div?))

--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -416,6 +416,10 @@ footer {
     height: 84px;
      width: 84px;
 }
+.friendpics{
+    height: 250px;
+    width: 250px;
+}
 .black-text{
  color: black;   
 }
